tdf#134106: Get rid of XDesktopInternal again

For internal functionality that is not meant to be called by client code, I
think it is appropriate to hide it either via XUnoTunnel (but which would have
been a tad incovenient, as it would have meant to make framework::Desktop in
framework/inc/services/desktop.hxx available to the code in
desktop/source/app/app.cxx), or via reuse of some existing, sufficently fitting
interface (as is done here with css.task.XJob).  This nicely avoids the
backwards compatibilty issue with remote Python scripts, as discussed in
tdf#134106 "Binary URP bridge disposed during call to
ServiceManager.createInstanceWithContext".

Change-Id: Ic9db9401ddf0f6b696344dd1d5c6ad279ea5a832
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97241
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
Tested-by: Jenkins